<resources>
    <string name="app_name">CrimeConnections</string>
    <string name="zip_code">Zip Code</string>
    <string name="enter_zip_code">Enter Zip Code</string>
    <string name="select_date_range">Select Date Range</string>
    <string name="_1_week">3 Months</string>
    <string name="_2_weeks">6 Months</string>
    <string name="_3_months">9 Months</string>
    <string name="select_crime_type">Select Crime Type</string>
    <string name="murder">Burglary</string>
    <string name="rape">Accident</string>
    <string name="assault">Assault</string>
    <string name="search_for_criminal_or_victim">Search for Criminal or Victim</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="search">Search</string>
    <string name="title_activity_state2">State2</string>
    <string name="title_activity_state3_errorstate">State3_errorstate</string>
    <string name="title_activity_state4">State4</string>
    <string name="back">back</string>
    <string name="Next">Next</string>
    <string name="NewSearch">New Search</string>
</resources>
